fix: second carousel - text overlapped with buttons replace Masha Support underline to hr

--- a/css/style.css
+++ b/css/style.css
@@ -922,7 +922,7 @@ a:hover {
 	top: 0px;
 	text-align: left;
 	left: 10vw;
-	width: 400px;
+	width: 75%;
 }
 
 @media (min-width: 769px) {
